# FeatureIDE

./: .gitignore  .project  .travis.yml  CONTRIBUTING.md  Jenkinsfile  README.md  changelog  collaborationview_export.xsd  pom.xml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE
.github/workflows/: maven.yml
UpdateSite/: artifacts.xml  content.xml
de.ovgu.featureide.Cloneanalysis/: plugin.xml
de.ovgu.featureide.ui.android/: .project  plugin.xml
de.ovgu.helloworldapp/: .project  AndroidManifest.xml
deploy/: pom.xml
deploy/NightlyUpdate/: category.xml  pom.xml
deploy/UpdateSite/: .gitignore  FeatureIde.b3aggr  artifacts.xml  associateSites.xml  changelog.txt  content.xml  site.xml
deploy/UpdateSite3/: .gitignore  .project  changelog.txt  site.xml
deploy/br.ufal.ic.colligens.feature/: .project  feature.xml  pom.xml
deploy/changelog/: change log.doc
deploy/de.ovgu.featureide.ahead/: .project  feature.xml  pom.xml
deploy/de.ovgu.featureide.antenna/: .project  feature.xml  pom.xml
deploy/de.ovgu.featureide.aspectj/: .project  feature.xml  pom.xml
deploy/de.ovgu.featureide.deltaj/: feature.xml
deploy/de.ovgu.featureide.exampleprojects/: .project  feature.xml  pom.xml
deploy/de.ovgu.featureide.feature/: .project  feature.xml  ids.txt  pom.xml
doc/: .project
eclipse_settings/: CleanUp.xml  CodeFormat.xml  CodeTemplates.xml
experimental/: .gitignore
plugins/de.ovgu.featureide.examples/featureide_examples/CMake-HelloWorld/src/: CMakeLists.txt  main.c  printHelloBeautifulWorld.c  printHelloWorld.c
projects/: .project
runtime/: pom.xml
(+25123 files in other folders)
